--- a/desenvolvimento-web/caixadeseleção.html
+++ b/desenvolvimento-web/caixadeseleção.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caixa</title>
-    <style> body { background-color: lightblue; } </style>.
+    <style type="text/css">
+    body {
+    color: blue;
+    background-color: rgb(64, 216, 4);
+  }
+  p {
+    color: rgb(194, 14, 155);
+  }
+   </style>
 </head>
 <body>
-    <h3>Agrupando campos</h3>
+       <h3>Fale Sobre você</h3>
+    <form>
+     <label>Descrição: </label><br>
+     <textarea style="border: 8px solid red;" rows="5" cols="80"></textarea>
+    </form>
+  
+  <h3>Agrupando campos</h3>
   <form>
     <fieldset>
     <legend>Dados pessoas</legend>
-<label>Nome</label>
-<input><br>
- <label>Email</label>
+
+    <label for="nome">Nome</label>
+    <p>aaaaaa</p>
+    <p>aaaaaa</p>
+    <p>aaaaaa</p>
+    <p>aaaaaa</p>
+    <p>aaaaaa</p>
+    <p>aaaaaa</p>
+    <p>aaaaaa</p>
+    <input type="text" name="nome" id="nome"><br>
+ <p>Email</p>
 <input><br>
 <label>Telefone</label>
 <input><br>
